--- a/exalumnos.html
+++ b/exalumnos.html
@@ -99,7 +99,7 @@
 
     <section id="main">
         <div class="container">
-            <div class="row pb-5 pt-5 d-flex align-items-center">
+            <div class="row pb-5 pt-5 d-flex justify-content-center">
                 <div class="col-12 col-lg-6 text-left align-self-center">
                     <div class="text-uppercase">
                         <small>Para dejar huella lo mejor</small>
@@ -120,23 +120,14 @@
                         <p>Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</p>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 ">
-                    <img src="images/prepamain.jpg" class="img-fluid rounded-sm" alt="Responsive image">
+                <div class="col-12 col-lg-6 d-flex align-items-center wrapper">
+                    <div class="col iframe-container">
+                        <iframe width="460" height="300" src="https://www.youtube.com/embed/yNDRzUkfJ0s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                    </div>
                 </div>
             </div>
         </div>
     </section>
-
-    <div class="container">
-        <div class="row my-5 py-5">
-            <div class="wrapper">
-                <div class="col iframe-container">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/yNDRzUkfJ0s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-
 
     <!--Extensiones niveles-->
     <div id="nav" class="nav pt-3" >
