--- a/primaria.html
+++ b/primaria.html
@@ -105,11 +105,11 @@
         
             if (dots.style.display === "none") {
             dots.style.display = "inline";
-            btnText.innerHTML = "Read more";
+            btnText.innerHTML = "Leer más";
             moreText.style.display = "none";
             } else {
             dots.style.display = "none";
-            btnText.innerHTML = "Read less";
+            btnText.innerHTML = "Leer menos";
             moreText.style.display = "inline";
             }
         }
