Kinder - boton leer mas

--- a/kindergarten.html
+++ b/kindergarten.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css"
     integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
     <link rel="icon" type="image.png/" href="images/logoanglo.png" />
+    <script src="funcionalidad.js"></script>
     <title>Colegio Anglo de las Amércias</title>
 </head>
 
@@ -114,12 +115,18 @@
                         y seguros de sí mismos.</p>
                         <p> Nuestro programa bilingüe impulsa de forma natural el aprendizaje del idioma inglés y español. Mitad del día en español y mitad del día en inglés. 
                         A través de actividades divertidas en el Aula, Biblioteca y Sala de Música.</p>
-                        <p>A través de la actividad física y dinámicas en el aula, los alumnos desarrollan funciones mentales como son la memoria, imaginación, 
-                        atención, desarrollo del lenguaje, formando su confianza, seguridad y autonomía.</p>
-                        <p>Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y auto confianza del niño, 
-                        además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.</p>
+                        <p>A través de la actividad física y dinámicas en el aula,<span id="dots">...</span><span id="more"> los alumnos desarrollan funciones mentales como son la memoria, imaginación, 
+                        atención, desarrollo del lenguaje, formando su confianza, seguridad y autonomía.
+                        <br>
+                        <br>
+                        Considerada una de las actividades deportivas más completas, la Natación contribuye en el desarrollo de la independencia y auto confianza del niño, 
+                        además de ejercitar los músculos, la coordinación motora, el sistema circulatorio y respiratorio.
+                        <br>
+                        <br>
+                        <small>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</small></span>
+                        </p>
                     </div>
-                    <small><p>Incorporada a la <strong>SEP</strong> (Secretaría de Educación Pública) y contamos con la certificación de <strong>Bachillerato Internacional IB</strong>  en el Programa de la Escuela Primaria (PEP).</p></small>
+                    <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
 
                 </div>
                 <div class="col-12 col-lg-6 m-0 p-0">
