--- a/primaria.html
+++ b/primaria.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link rel="icon" type="image.png/" href="images/logoanglo.png" />
+    <script src="funcionalidad.js"></script>
     <title>Colegio Anglo de las Amércias</title>
 </head>
 
@@ -97,23 +98,7 @@
             </div>
         </nav>
     </header>
-    <script>
-        function myFunction() {
-            var dots = document.getElementById("dots");
-            var moreText = document.getElementById("more");
-            var btnText = document.getElementById("myBtn");
-        
-            if (dots.style.display === "none") {
-            dots.style.display = "inline";
-            btnText.innerHTML = "Leer más";
-            moreText.style.display = "none";
-            } else {
-            dots.style.display = "none";
-            btnText.innerHTML = "Leer menos";
-            moreText.style.display = "inline";
-            }
-        }
-        </script>
+
     <!-- HEADER-->
 
 
