Secundaria boton leer mas

--- a/secundaria.html
+++ b/secundaria.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link rel="icon" type="image.png/" href="images/logoanglo.png" />
+    <script src="funcionalidad.js"></script>
     <title>Colegio Anglo de las Amércias</title>
 </head>
 
@@ -113,12 +114,14 @@
                         conocimientos y actitudes para la vida.</p> 
                         <p>Hacemos énfasis en la <strong>formación colaborativa</strong>, <strong>aprendizaje por competencias</strong>,<strong> basado en retos </strong> y a través de
                         <strong>proyectos de impacto social</strong> mediante el trabajo comunitario y el voluntariado.</p>
-                        <p>El aprendizaje de las <strong>TIC's</strong> lo promovemos a través del área de informática, trabajando con programación y manejo de bases
-                        de datos por medio de la plataforma virtual.</p>
-                        <p>Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
-                        Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</p>
+                        <p>El aprendizaje de las <strong>TIC's</strong> <span id="dots">...</span><span id="more">lo promovemos a través del área de informática, trabajando con programación y manejo de bases
+                        de datos por medio de la plataforma virtual.
+                        <br><br>
+                        Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
+                        Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</span></p>
                         
                     </div>
+                    <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
                 </div>
                 <div class="col-12 col-lg-6 m-0 p-0">
                     <img src="images/Secu.png" class="img-fluid rounded-sm" alt="Responsive image">
