--- a/bachillerato.html
+++ b/bachillerato.html
@@ -14,6 +14,7 @@
         <link rel="stylesheet" href="index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.8.1/baguetteBox.min.css">
     <link rel="icon" type="image.png/" href="images/logoanglo.png" />
+    <script src="funcionalidad.js"></script>
     <title>Colegio Anglo de las Amércias</title>
 </head>
 
@@ -115,12 +116,15 @@
                         Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
                         herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
                         personal, universitario y profesional.</p>
-                        <p>Formación colaborativa, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como
-                        trabajo comunitario son pilares en Bachillerato Anglo.</p>
-                        <p>Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
-                        nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.</p>
-                        <p>Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</p>
+                        <p>Formación colaborativa, <span id="dots">...</span><span id="more">aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como
+                        trabajo comunitario son pilares en Bachillerato Anglo.
+                        <br><br>
+                        Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
+                        nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.
+                        <br><br>
+                        Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</span></p>
                     </div>
+                    <button onclick="myFunction()" id="myBtn" class="btn btn-link font-weight-bold">Leer más</button>
                 </div>
                 <div class="col-12 col-lg-6 col-12 col-lg-6 m-0 p-0 ">
                     <img src="images/Prepa.png" class="img-fluid rounded-sm" alt="Responsive image">
