--- a/modelo.html
+++ b/modelo.html
@@ -102,6 +102,17 @@
         <!-- <p class="page-description">Cualidades que el alumno adquiere en su formación IB.</p> -->
     </div>
 
+    <div class="container text-justify">
+        <p>
+            Nuestra filosofía educativa se basa en modelos eclécticos, destacando el constructivismo, aprendizaje activo y pensamiento creativo. Concebimos al ser humano como una persona en desarrollo y crecimiento permanente. Por ello velamos para que las experiencias de aprendizaje permitan que cada alumna y alumno del colegio sea feliz y simultáneamente empiece a construir las bases de su realización futura; floreciendo de forma integral y activa su desarrollo intelectual, valoral, afectivo y social; con la guía y acompañamiento personalizado de los profesores. Asimismo, los padres de familia son parte valiosísima de nuestro modelo, ya que ellos colaboran y dan continuidad al aprendizaje en familia desde el hogar.
+
+            <br><br>
+
+            En cada experiencia de aprendizaje, nuestras alumnas y alumnos van incorporando a sus vidas aprendizajes significativos, atributos del perfil IB, competencias idiomáticas, cultura STEAM y estilos de vida saludable; todo esto en un ambiente estimulante, plenamente amigable y emocionalmente sano y seguro. Logrando la formación de personas integras, competentes y autónomas; capaces de tomar decisiones informadas, libres y responsables con sus vidas, la sociedad y el medio ambiente. 
+        </p>
+    </div>
+
+
     <!--IB-->
     <section id="ibcontainer">
         <div class="container">
@@ -275,16 +286,14 @@
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>
-                    Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
-                    creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
-                    conocimientos y actitudes para la vida.</p> 
-                    <p>Hacemos énfasis en la <strong>formación colaborativa</strong>, <strong>aprendizaje por competencias</strong>,<strong> basado en retos </strong> y a través de
-                    <strong>proyectos de impacto social</strong> mediante el trabajo comunitario y el voluntariado.</p>
-                    <p>El aprendizaje de las <strong>TIC's</strong> lo promovemos a través del área de informática, trabajando con programación y manejo de bases
-                    de datos por medio de la plataforma virtual.</p>
-                    <p>Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
-                    Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</p>
+                   <p>La educación STEAM (Ciencia, Tecnología, Ingeniería, Artes y Matemáticas, por sus siglas en inglés) tiene como objetivo el involucrar en los alumnos nociones de éstas áreas para despertar en ellos la curiosidad en temas relevantes de investigación, desarrollo y aplicación utilizando actividades, aprendizajes y a reflexionar en cómo funciona el mundo.
+
+                    <br><br>
+
+                    Dentro del modelo STEAM y con ayuda del Laboratorio MakerSTEAM el objetivo es proveer a los alumnos herramientas para afrontar los retos de la era digital, aplicando sus conocimiento adquiridos en clases en Proyectos Tecnológicos, Científicos y de Ingeniería.
+                    <br><br>
+
+                   </p>
                 </div>
                
             </div>
