--- a/somos.html
+++ b/somos.html
@@ -122,6 +122,11 @@
                     atributos del perfil del IB, el cual es un programa internacional que facilita el aprendizaje vinculándolo a componentes
                     genuinos del entorno que rodea al niño, construyendo significados y logrando que la comprensión tenga lugar en el
                     contexto de la exploración de contenidos pertinentes, que lo motiven y lo lleven a la reflexión. <br><br>
+                    
+                    Somos un colegio laico, bilingüe, poseemos la certificación IB, promovemos la cultura steam y el cultivo de la salud física y emocional. Nos ubicamos en un campus accesible y seguro para tus hijos.
+
+                    <br><br>
+
                     Deseamos que nuestros alumnos se sientan bienvenidos a éste su colegio y que su estancia sea increíble. Todos los que en
                     él laboramos nos esforzamos por crear un ambiente favorable para su aprendizaje.
                     ¡Si todos anhelamos lo mismo, trabajemos juntos y hagámoslo realidad!
@@ -138,20 +143,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container">
-
-            <div class="row pb-5 text-center">
-
-                <div class="col-12 col-md-12">
-                    <h3 class="font-weight-bold my-4">¿Qué es Colegio Anglo?<br> </h3>
-                    <p class="grey-text mb-md-0 mb-5">Es una institución educativa apasionada por brindar el conocimiento y las herramientas a nuestros alumnos para
-                    superar los retos de forma creativa y con pensamiento crítico. Brindando soluciones a las necesidades del mundo actual
-                    formando alumnos con habilidades, conocimientos y aptitudes que se necesitan actualmente.</p>
-        
-                </div>
-
-            </div>
-        </div> -->
     </section>
 <!--main-->
 
