--- a/campus.html
+++ b/campus.html
@@ -103,11 +103,11 @@
         <div class="container">
             <div class="row pt-5 d-flex align-items-center">
                 <div class="col-12 col-lg-6">
-                    <div class=" text-uppercase mb-5">
+                    <div class="mb-5">
                         <h2>Nuestras instalaciones</h2>
-                        <small>El Colegio se encuentra ubicado en una zona residencial céntrica, dentro de una extensión
+                        <p>Colegio Anglo se encuentra ubicado en una zona residencial céntrica, dentro de una extensión
                             de dos hectáreas que albergan
-                            Kindergarten, Primaria, Secundaria y Bachillerato.</small>
+                            Kindergarten, Primaria, Secundaria y Bachillerato.</p>
                     </div>
             </div>
         </div>
