--- a/bachillerato.html
+++ b/bachillerato.html
@@ -116,8 +116,7 @@
                         Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
                         herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
                         personal, universitario y profesional.</p>
-                        <p>Formación colaborativa, <span id="dots">...</span><span id="more">aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como
-                        trabajo comunitario son pilares en Bachillerato Anglo.
+                        <p>Formación colaborativa<span id="dots">...</span><span id="more">, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como trabajo comunitario son pilares en Bachillerato Anglo.
                         <br><br>
                         Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
                         nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.
