--- a/modelo.html
+++ b/modelo.html
@@ -126,17 +126,9 @@
                                 <h2>¿Qué es la Certificación IB?</h2>
                             </div>
                 <hr>
-                    <p class="text-justify">El Programa de la Escuela Primaria (PEP) facilita el aprendizaje vinculándolo a componentes genuinos
-                        del entorno que rodea al niño, construyendo significados y logrando que la comprensión tenga lugar en el contexto de
-                        la exploración de contenidos pertinentes, que lo motiven y lo lleven a la reflexión. </p>
-                        <p class="text-justify">Gracias a su marco transdisciplinario basado en la indagación, el PEP estimula a los alumnos a
-                        pensar por sí mismos y a asumir la responsabilidad de su propio aprendizaje a medida que exploran cuestiones y oportunidades
-                        locales y globales en contextos de la vida real.</p>
-                        
-                        <p class="text-justify "> Al ser un Colegio del Mundo IB, el Colegio Anglo ha pasado a formar parte de un grupo muy selecto de
-                        escuelas internacionales
-                        que han logrado la codiciada acreditación para la enseñanza de los programas del Bachillerato
-                        Internacional.</p>
+                    <p class="text-justify">El Colegio Anglo forma parte de un grupo muy selecto de escuelas internacionales que han logrado la Certificación en el programa PEP del Bachillerato Internacional, siendo un Colegio del Mundo IB.
+                    El programa de la Escuela Primaria (PEP) facilita a nuestros alumnos el aprendizaje significativo, logrando que la comprensión tenga lugar en el contexto de la exploración de contenidos pertinentes, que  lo motiven  y lo lleven a la reflexión. Gracias a su marco transdisciplinario basado en la indagación, PEP estimula a los alumnos a reflexionar y asumir la responsabilidad de su propio aprendizaje a medida que exploran su entorno, con el objetivo de ser ciudadanos del mundo responsables, conscientes, capaces de vivir en armonía con el mundo que los rodea.
+                        </p>
                 </div>
             </div>
         </div>
@@ -247,24 +239,16 @@
     <hr>
 
     <div class="text-center mt-2">
-        <h1 class="text-cemter">AMCO</h1>
-        <small>Aquí encuentras las etiquetas para el nivel correspondiente.</small>
+        <h1 class="text-center">AMCO</h1>
     </div>
 
     <div class="container">
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>
-                    Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
-                    creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
-                    conocimientos y actitudes para la vida.</p> 
-                    <p>Hacemos énfasis en la <strong>formación colaborativa</strong>, <strong>aprendizaje por competencias</strong>,<strong> basado en retos </strong> y a través de
-                    <strong>proyectos de impacto social</strong> mediante el trabajo comunitario y el voluntariado.</p>
-                    <p>El aprendizaje de las <strong>TIC's</strong> lo promovemos a través del área de informática, trabajando con programación y manejo de bases
-                    de datos por medio de la plataforma virtual.</p>
-                    <p>Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
-                    Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</p>
+                   <p>Amco es un sistema integral de enseñanza, el cual está basado en las teorías de La Voz Generadora, Inteligencias Múltiples e Inteligencia Emocional que permite a nuestros alumnos generar aprendizajes significativos mediante un enfoque natural, el trabajo colaborativo y el estímulo de la curiosidad por investigar y descubrir.
+                    Amco desarrolla recursos y metodologías que se adaptan de una manera natural y eficiente a los requerimientos de las nuevas generaciones, dándoles una experiencia de felicidad, amistad, aprendizaje, confianza, cariño y respeto.
+                    </p>
                 </div>
                 <a href="https://www.amco.me/" target="_blank"><button type="button" class="btn btn-primary btn-lg btn-block">Ir a Amco</button></a>
             </div>
