--- a/somos.html
+++ b/somos.html
@@ -111,7 +111,7 @@
                 <div class="col-12 col-md-6 text-justify">
                     <p>Bienvenidos al Colegio Anglo. Somos un colegio que surgió en agosto de 1991 como respuesta a la necesidad de una
                     institución que proporcionara una educación bilingüe de calidad que existía en el puerto de Lázaro Cárdenas Michoacán. <br><br>
-                    Hoy, veintiocho años después, continuamos trabajando para brindar a nuestros alumnos un ambiente de crecimiento
+                    Hoy, treinta años después, continuamos trabajando para brindar a nuestros alumnos un ambiente de crecimiento
                     personal, de estudio y de excelencia académica, donde aprendan sintiéndose felices y queridos.
                     Nuestra visión es formar alumnos y jóvenes con habilidades y conocimientos, valores y aptitudes que en la actualidad se
                     requieren para triunfar como estudiantes, como personas y como ciudadanos. <br><br>
@@ -127,7 +127,7 @@
 
                     <br><br>
 
-                    Deseamos que nuestros alumnos se sientan bienvenidos a éste su colegio y que su estancia sea increíble. Todos los que en
+                    Deseamos que nuestros alumnos se sientan bienvenidos al Anglo y que su estancia sea increíble. Todos los que en
                     él laboramos nos esforzamos por crear un ambiente favorable para su aprendizaje.
                     ¡Si todos anhelamos lo mismo, trabajemos juntos y hagámoslo realidad!
                     </p>
