Modelo -> ... floreciendo de forma integral y active su desarrollo ...

--- a/modelo.html
+++ b/modelo.html
@@ -99,12 +99,11 @@
 
     <div class=" my-5 text-center">
         <h1 class="h1-responsive font-weight-bold">Modelo Educativo Anglo</h1>
-        <!-- <p class="page-description">Cualidades que el alumno adquiere en su formación IB.</p> -->
     </div>
 
     <div class="container text-justify">
         <p>
-            Nuestra filosofía educativa se basa en modelos eclécticos, destacando el constructivismo, aprendizaje activo y pensamiento creativo. Concebimos al ser humano como una persona en desarrollo y crecimiento permanente. Por ello velamos para que las experiencias de aprendizaje permitan que cada alumna y alumno del colegio sea feliz y simultáneamente empiece a construir las bases de su realización futura; floreciendo de forma integral y activa su desarrollo intelectual, valoral, afectivo y social; con la guía y acompañamiento personalizado de los profesores. Asimismo, los padres de familia son parte valiosísima de nuestro modelo, ya que ellos colaboran y dan continuidad al aprendizaje en familia desde el hogar.
+            Nuestra filosofía educativa se basa en modelos eclécticos, destacando el constructivismo, aprendizaje activo y pensamiento creativo. Concebimos al ser humano como una persona en desarrollo y crecimiento permanente. Por ello velamos para que las experiencias de aprendizaje permitan que cada alumna y alumno del colegio sea feliz y simultáneamente empiece a construir las bases de su realización futura; floreciendo de forma integral y active su desarrollo intelectual, valoral, afectivo y social; con la guía y acompañamiento personalizado de los profesores. Asimismo, los padres de familia son parte valiosísima de nuestro modelo, ya que ellos colaboran y dan continuidad al aprendizaje en familia desde el hogar.
 
             <br><br>
 
@@ -122,7 +121,6 @@
                         </div>
                 <div class="col-12 col-md-8 text-center py-3">
                         <div class="col text-center">
-                                <!-- <h2>Certificación Internacional IB</h2> -->
                                 <h2>¿Qué es la Certificación IB?</h2>
                             </div>
                 <hr>
