Modelo y somos -> mayúsculas

--- a/somos.html
+++ b/somos.html
@@ -123,7 +123,7 @@
                     genuinos del entorno que rodea al niño, construyendo significados y logrando que la comprensión tenga lugar en el
                     contexto de la exploración de contenidos pertinentes, que lo motiven y lo lleven a la reflexión. <br><br>
                     
-                    Somos un colegio laico, bilingüe, poseemos la certificación IB, promovemos la cultura steam y el cultivo de la salud física y emocional. Nos ubicamos en un campus accesible y seguro para tus hijos.
+                    Somos un colegio laico, bilingüe, poseemos la certificación IB, promovemos la cultura STEAM y el cultivo de la salud física y emocional. Nos ubicamos en un campus accesible y seguro para tus hijos.
 
                     <br><br>
 
