--- a/modelo.html
+++ b/modelo.html
@@ -107,7 +107,7 @@
 
             <br><br>
 
-            En cada experiencia de aprendizaje, nuestras alumnas y alumnos van incorporando a sus vidas aprendizajes significativos, atributos del perfil IB, competencias idiomáticas, cultura STEAM y estilos de vida saludable; todo esto en un ambiente estimulante, plenamente amigable y emocionalmente sano y seguro. Logrando la formación de personas integras, competentes y autónomas; capaces de tomar decisiones informadas, libres y responsables con sus vidas, la sociedad y el medio ambiente. 
+            En cada experiencia de aprendizaje, nuestras alumnas y alumnos van incorporando a sus vidas aprendizajes significativos, atributos del perfil IB, competencias idiomáticas, cultura STEAM y estilos de vida saludable; todo esto en un ambiente estimulante, plenamente amigable y emocionalmente sano y seguro. Logrando la formación de personas íntegras, competentes y autónomas; capaces de tomar decisiones informadas, libres y responsables con sus vidas, la sociedad y el medio ambiente. 
         </p>
     </div>
 
@@ -125,7 +125,7 @@
                             </div>
                 <hr>
                     <p class="text-justify">El Colegio Anglo forma parte de un grupo muy selecto de escuelas internacionales que han logrado la Certificación en el programa PEP del Bachillerato Internacional, siendo un Colegio del Mundo IB.
-                    El programa de la Escuela Primaria (PEP) facilita a nuestros alumnos el aprendizaje significativo, logrando que la comprensión tenga lugar en el contexto de la exploración de contenidos pertinentes, que  lo motiven  y lo lleven a la reflexión. Gracias a su marco transdisciplinario basado en la indagación, PEP estimula a los alumnos a reflexionar y asumir la responsabilidad de su propio aprendizaje a medida que exploran su entorno, con el objetivo de ser ciudadanos del mundo responsables, conscientes, capaces de vivir en armonía con el mundo que los rodea.
+                    El programa de la Escuela Primaria (PEP) facilita a nuestros alumnos el aprendizaje significativo, logrando que la comprensión tenga lugar en el contexto de la exploración de contenidos pertinentes, que  lo motiven  y lo lleven a la reflexión. Gracias a su marco transdisciplinario basado en la indagación, el PEP estimula a los alumnos a reflexionar y asumir la responsabilidad de su propio aprendizaje a medida que exploran su entorno, con el objetivo de ser ciudadanos del mundo responsables, conscientes, capaces de vivir en armonía con el mundo que los rodea.
                         </p>
                 </div>
             </div>
@@ -244,7 +244,7 @@
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>Amco es un sistema integral de enseñanza, el cual está basado en las teorías de La Voz Generadora, Inteligencias Múltiples e Inteligencia Emocional que permite a nuestros alumnos generar aprendizajes significativos mediante un enfoque natural, el trabajo colaborativo y el estímulo de la curiosidad por investigar y descubrir.
+                   <p>Amco es un sistema integral de enseñanza, el cual está basado en las teorías de la Voz Generadora, Inteligencias Múltiples e Inteligencia Emocional que permite a nuestros alumnos generar aprendizajes significativos mediante un enfoque natural, el trabajo colaborativo y el estímulo de la curiosidad por investigar y descubrir.
                     Amco desarrolla recursos y metodologías que se adaptan de una manera natural y eficiente a los requerimientos de las nuevas generaciones, dándoles una experiencia de felicidad, amistad, aprendizaje, confianza, cariño y respeto.
                     </p>
                 </div>
@@ -267,11 +267,11 @@
         <div class="row pb-5 pt-3 d-flex align-items-center">              
             <div class="col-12 col-lg-6 text-left align-self-center">
                 <div class="text-justify">
-                   <p>La educación STEAM (Ciencia, Tecnología, Ingeniería, Artes y Matemáticas, por sus siglas en inglés) tiene como objetivo el involucrar en los alumnos nociones de éstas áreas para despertar en ellos la curiosidad en temas relevantes de investigación, desarrollo y aplicación utilizando actividades, aprendizajes y a reflexionar en cómo funciona el mundo.
+                   <p>La educación STEAM (Ciencia, Tecnología, Ingeniería, Artes y Matemáticas, por sus siglas en inglés) tiene como objetivo involucrar en los alumnos nociones de éstas áreas para despertar en ellos la curiosidad en temas relevantes de investigación, desarrollo y aplicación utilizando actividades, aprendizajes y a reflexionar en cómo funciona el mundo.
 
                     <br><br>
 
-                    Dentro del modelo STEAM y con ayuda del Laboratorio MakerSTEAM el objetivo es proveer a los alumnos herramientas para afrontar los retos de la era digital, aplicando sus conocimiento adquiridos en clases en Proyectos Tecnológicos, Científicos y de Ingeniería.
+                    La finalidad del modelo STEAM y el Laboratorio MakerSTEAM es proveer a los alumnos con herramientas para afrontar con éxito los retos de la era digital, aplicando sus conocimiento adquiridos en clases en Proyectos tecnológicos, científicos y de ingeniería.
                     <br><br>
 
                    </p>
