--- a/campus.html
+++ b/campus.html
@@ -126,7 +126,7 @@
                             <li class="list-group-item">Salas multimedia y usos múltiples</li>
                             <li class="list-group-item">Sala de estimulación temprana (PreKinder)</li>
                         </ul>
-                        <h6>Todas nuestras Aulas están Climatizadas para mayor comodidad de los alumnos.</h6>
+                        <h6>Todas nuestras aulas están climatizadas para mayor comodidad de los alumnos.</h6>
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 ">
