--- a/inscripciones.html
+++ b/inscripciones.html
@@ -111,7 +111,7 @@
                 <!-- Grid column -->
                 <div class="col-12 col-6 col-sm">
                     <img src="images/Ins-kinder.png" alt="" style="max-width:100%;" class="rounded">
-                    <h3 class="font-weight-bold mt-2">PreKinder / Kinder</h3>
+                    <h3 class="font-weight-bold mt-2">Kinder</h3>
                     <div class="col-12 text-center mb-5">
                         <a href="documentos/Requisitos_Kindergarten_Ciclo 20-21.pdf" target="_blank"><button type="button" class="btn btn-primary btn-lg">Requisitos</button></a>
                     </div>
