Exalumns -> seccion exalumnos

--- a/exalumnos.html
+++ b/exalumnos.html
@@ -102,31 +102,38 @@
             <div class="row pb-5 pt-5 d-flex justify-content-center">
                 <div class="col-12 col-lg-6 text-left align-self-center">
                     <div class="text-uppercase">
-                        <small>Para dejar huella lo mejor</small>
-                        <h2>Anglo</h2>
+                        <h2>ExAnglo</h2>
                     </div>
-                    <div>
-                            <h5 class="font-weight-normal">La etapa Preuniversitaria forma parte importante para un gran futuro.</h5>
-                        </div>
                     <div class="text-justify">
-                        <p>
-                        Impulsamos el desarrollo de los alumnos con base en el aprendizaje significativo, en donde los jóvenes obtienen
-                        herramientas académicas y tecnológicas para el desarrollo de las habilidades y destrezas que ayudan en su futuro
-                        personal, universitario y profesional.</p>
-                        <p>Formación colaborativa, aprendizaje por competencias, aprendizaje basado en retos y aprendizaje por proyectos así como
-                        trabajo comunitario son pilares en Bachillerato Anglo.</p>
-                        <p>Parte fundamental es la promoción de la conciencia ecológica, mediante acciones y experiencias formativas concretas
-                        nuestros alumnos fortalecen hábitos y conductas amigables con el medio ambiente.</p>
-                        <p>Bachillerato cuenta con apoyo Psicopedagógico, Plan de Vida y Carrera y Escuela para Padres.</p>
+                        <p>La comunidad de Exalumnos del Colegio Anglo es parte importante y activa de la vida institucional, a lo largo de estos 30 años de trabajo educativo. <br> <br>
+                        Los Exalumnos fortalecen la identidad e imagen del Colegio, y de igual manera, refrendan la calidad formativa que recibieron en su Alma Mater.</p>
                     </div>
                 </div>
-                <div class="col-12 col-lg-6 d-flex align-items-center wrapper">
+                <div class="col-12 col-lg-6 d-flex align-items-center wrapper my-4">
                     <div class="col iframe-container">
                         <iframe width="460" height="300" src="https://www.youtube.com/embed/yNDRzUkfJ0s" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                     </div>
                 </div>
             </div>
         </div>
+
+        <section>
+            <div class="container">
+                <div class="row my-4">
+                    <div class="col-12 col-md-6">
+                        <h2>Impulsa la comunidad Anglo</h2>
+                        <p>Queremos que que compartas tu experiencia, conocimientos y apoyes a las nuevas generaciones a desarrollar habilidades y conocimientos. </p>
+                        <h3>¿Aceptas el reto?</h3>
+                        <p>Escribenos a <a href="mailto: exalumnos@colegioanglo.mx">exalumnos@colegioanglo.mx</a></p>
+                    </div>
+                    <figure class="col-12 col-md-6 figure">
+                        <img src="images/graduates.png" alt="" class="mw-100">
+                    </figure>
+                </div>
+            </div>
+        </section>
+
+
     </section>
 
     <!--Extensiones niveles-->
