Todo -> correo preescolar y Extraescolares -> texto

--- a/extraescolares.html
+++ b/extraescolares.html
@@ -105,18 +105,9 @@
 
     <div class="container">
         <div class="row pb-0 d-flex align-items-center">              
-            <div class="col-12 col-lg-6 text-left align-self-center">
+            <div class="col-12 col-lg-6 text-lef">
                 <div class="text-justify">
-                <p>
-                    Fortalecemos los procesos de aprendizaje en los adolescentes, fomentando su capacidad de análisis, reflexión y 
-                    creatividad, acompañándolos en el desarrollo de su identidad personal y social a fin de lograr el dominio de competencias, 
-                    conocimientos y actitudes para la vida.</p> 
-                    <p>Hacemos énfasis en la <strong>formación colaborativa</strong>, <strong>aprendizaje por competencias</strong>,<strong> basado en retos </strong> y a través de
-                    <strong>proyectos de impacto social</strong> mediante el trabajo comunitario y el voluntariado.</p>
-                    <p>El aprendizaje de las <strong>TIC's</strong> lo promovemos a través del área de informática, trabajando con programación y manejo de bases
-                    de datos por medio de la plataforma virtual.</p>
-                    <p>Secundaria destaca por su alto nivel de competitividad en disciplinas deportivas como Fútbol, Básquetbol, Atletismo; y académicas como Olimpiadas Nacionales de 
-                    Talentos de Física, Olimpiada de Matemáticas y Ortografía obteniendo preseas doradas en las justas locales, regionales, estatales y nacionales.</p>
+                <p>Es un espacio vespertino seguro, amigable y divertido en el que los alumnos del Colegio practican disciplinas deportivas de su preferencia y fortalecen estilos de vida saludable, como parte fundamental de la formación integral que brindael Anglo.</p>
                 </div>
             
             </div>
@@ -250,7 +241,7 @@
                   </div>
                   <div class="flexbox p-1">
                       <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
-                      <a>kindergarten@colegioanglo.mx</a>
+                      <a>preescolar@colegioanglo.mx</a>
                   </div>
               </div>
               <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
