--- a/somos.html
+++ b/somos.html
@@ -211,7 +211,7 @@
                     </div>
                     <div class="flexbox p-1">
                         <img src="images/email.svg" alt="" style="max-width: 7%" class="mr-2">
-                        <a>kindergarten@colegioanglo.mx</a>
+                        <a>preescolar@colegioanglo.mx</a>
                     </div>
                 </div>
                 <div class="col-12 col-md-6 col-lg-3 text-center pt-1">
